# python-insta-follows

./: .env.sample  Makefile  README.md  main.py  pyproject.toml
Insta Saved Sessions/: robrob_br.pkl
app/: settings.py  terms_to_ignore.py
