[tool.poetry]
name = "insta-follow"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [{include = "app/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"
python-dotenv = "^1.0.0"
instagpy = "^0.1.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
